# cv

./: build  css-scale.hs  cv.cabal  default.nix  index.html  pkgs.nix  shell.nix
lang/: en.html  fr.html  index.html  timothee-jourde-en.html  timothee-jourde-fr.html
nodepkgs/: node-packages.nix  node2nix
res/: style.css  style.min.css  style.prefix.min.css
src/: CV.hs  CVRenderer.hs  Cv.hs  En.hs  Fr.hs  Main.hs  Rich.hs
src/CV/: Renderer.hs  Rich.hs  Types.hs
src/Cv/: Renderer.hs  Rich.hs  Types.hs
