name:                cv
version:             0.1
homepage:            https://github.com/timjrd/cv
license:             AGPL-3
license-file:        LICENSE
author:              Timothée Jourde
maintainer:          timjrd@netc.fr
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable cv
  main-is:             Main.hs
  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010
