name:                cv
version:             0.1.0.0

synopsis:            Custom curriculum vitæ / resume template
homepage:            https://github.com/timjrd/cv

license:             Apache-2.0
license-file:        LICENSE

author:              Timothée Jourde
maintainer:          timjrd@netc.fr

category:            Web

build-type:          Simple
cabal-version:       >=1.10

executable cv
  main-is:           Main.hs

  other-modules:     En Fr
                     Cv Cv.Types Cv.Renderer Cv.Rich

  other-extensions:  OverloadedStrings
                     ExistentialQuantification

  build-depends:     base, containers, bytestring,
                     blaze-markup, blaze-html

  hs-source-dirs:    src

  default-language:  Haskell2010
